Date	Added

2008/07/27
	* Conf file adjustments for the loginmerge branch
	- added new login and ipban db config options to login_athena.conf
	- login database options are no longer in inter_athena.conf!
	- moved setting 'lowest_gm_level' from inter_athena.conf to battle/gm.conf
	- removed setting 'gm_read_method'
	- removed options for setting `login` table column names
	- deleted file GM_account.txt, now the savefile is used for this
2008/07/23
	* Increased max. hairstyle number, 23 -> 25 (bugreport:1773) [ultramage]
2008/07/22
	* Rev. 12981 Removed mail commands that no longer exist from help.txt. [L0ne_W0lf]
2008/06/14
	* Rev. 12833 Uncommented all novice map, and added mapflags. [L0ne_W0lf]
	* Additionally; changed starting map from new_zone to new_1-1.
2008/06/06
	* Rev. 12761 Added mapflags in preparation for Monster Races. [L0ne_W0lf]
2008/06/01
	* Added gm_viewequip_min_lv to gm.conf [ultramage]
2008/05/28
	* Rev. r12736 Added new maps related to episode 13.1. [L0ne_W0lf]
2008/04/28
	* Rev. 12674 Updated gvg_eliminate_time comment to reflect use in new Woe scripts. [L0ne_W0lf]
2008/04/18
	* Implemented config setting 'vending_over_max' [ultramage]
2008/04/02
	* Rev. 12462 Uncommented restricted map entryies for WoESE maps. [L0ne_W0lf]
2008/03/07
	* Added config settings mob_active_time and boss_active_time, what they do
	  is specify a duration during which monsters will keep running their active
	  AI after all players have left their vecinity. Their current defaults are
	  set to 0 (disabled). [Skotlex]
2008/02/29
	*Rev. 12273 Added some additional map flags for some newer maps. [L0ne_W0lf]
2008/02/27
	* Rev. 12268 Added information for cash related @ and # commands. [L0ne_W0lf]
2008/02/27
	* Disabled idle_no_autoloot setting (bugreport:1051)
2008/02/14
	* Removed atcommand @whozeny [ultramage]
2008/02/11
	* Added 'input_min_value' and 'input_max_value' to script_athena.conf. [FlavioJS]
2008/01/22