@@ -51,13 +51,6 @@ scdata_txt: save/scdata.txt
 // "Can't connect to local MySQL server through socket '/tmp/mysql.sock' (2)"
 // and you have localhost, switch it to 127.0.0.1
 
-// MySQL Login SQL Server
-login_server_ip: 127.0.0.1
-login_server_port: 3306
-login_server_id: ragnarok
-login_server_pw: ragnarok
-login_server_db: ragnarok
-
 // MySQL Character SQL server
 char_server_ip: 127.0.0.1
 char_server_port: 3306
@@ -77,14 +70,7 @@ log_db_ip: 127.0.0.1
 log_db_port: 3306
 log_db_id: ragnarok
 log_db_pw: ragnarok
-log_db: log
-
-// for TXT -> SQL convertors
-db_server_ip: 127.0.0.1
-db_server_port: 3306
-db_server_id: ragnarok
-db_server_pw: ragnarok
-db_server_logindb: ragnarok
+log_db_db: log
 
 // DO NOT CHANGE ANYTHING BEYOND THIS LINE UNLESS YOU KNOW YOUR DATABASE DAMN WELL
 // this is meant for people who KNOW their stuff, and for some reason want to change their
